# dftd4-fit

./: .gitignore  README.md  fpm.toml  meson.build  meson_options.txt
.github/workflows/: build.yml
app/: cli.f90  driver.f90  meson.build
config/: meson.build
man/: dftd4-fit.1.adoc
subprojects/: minpack.wrap  nlopt-f.wrap
test/: fullfitset.csv
